[package]
name = "openaction"
authors = [ "ninjadev64" ]
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

[dependencies]
anyhow = "1.0"
futures-util = "0.3"
log = "0.4"
once_cell = "1.19"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
tokio = { version = "1.38", features = [ "rt", "net", "sync" ] }
tokio-tungstenite = "0.23"
